[package]
name = "concrete-csprng"
version = "0.2.0"
edition = "2018"
authors = ["D. Ligier", "J.B. Orfila", "A. Péré", "S. Tap", "Zama team"]
license = "BSD-3-Clause-Clear"
description = "Cryptographically Secure PRNG used in the FHE concrete library."
homepage = "https://crates.io/crates/concrete"
documentation = "https://docs.zama.ai/concrete/lib"
repository = "https://github.com/zama-ai/concrete"
readme = "README.md"
keywords = ["fully", "homomorphic", "encryption", "fhe", "cryptography"]

[dependencies]
aes-soft = "0.6.4"
rayon = {version="1.5.0", optional= true}

[dev-dependencies]
rand = "0.8.3"
criterion = "0.3"

[features]
slow = []
multithread = ["rayon"]

[[bench]]
name = "benchmark"
harness = false

[[bin]]
name = "generate_random"
path = "src/generate_random.rs"
