[package]
name = "concrete-integer"
version = "0.1.0"
edition = "2018"
authors = ["Zama team"]
license = "BSD-3-Clause-Clear"
description = "Homomorphic Integer circuit interface for the concrete FHE library."
homepage = "https://www.zama.ai/concrete-framework"
documentation = "https://docs.zama.ai/concrete/"
repository = "https://github.com/zama-ai/concrete"
readme = "README.md"
keywords = ["fully", "homomorphic", "encryption", "fhe", "cryptography"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rayon = "1.5.2"
# lazy_static is used for the keycache.
# It is both a deps to allow usage in bench in integer crate
# and dev-deps to automatically enable it in tests
lazy_static = { version = "1.4.0", optional = true }

[target.'cfg(target_arch = "x86_64")'.dependencies.concrete-core]
version = "1.0.0"
features = [
    "backend_default",
    "backend_default_serialization",
    "backend_default_parallel",
    "backend_default_generator_x86_64_aesni"
]

[target.'cfg(target_arch = "aarch64")'.dependencies.concrete-core]
version = "1.0.0"
features = [
    "backend_default",
    "backend_default_serialization",
    "backend_default_parallel",
    "backend_default_generator_aarch64_aes"
]


[dependencies.concrete-shortint]
path = "../concrete-shortint"
version = "0.1.0"

[dev-dependencies]
criterion = "0.3.4"
lazy_static = "1.4.0"
bincode = "1.3.3"
paste = "1.0.7"
rand = "0.8.4"
doc-comment = "0.3.3"
concrete-shortint = { path = "../concrete-shortint", features = ["internal-keycache"] }

[features]
# Keychache used to speed up tests and benches
# by not requiring to regererate keys at each launch
internal-keycache = ["lazy_static", "concrete-shortint/internal-keycache"]
nightly-avx512 = ["concrete-shortint/nightly-avx512"]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]

[[bench]]
name = "bench"
harness = false