[package]
name = "concrete-optimizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concrete-commons = { git = "ssh://git@github.com/zama-ai/concrete-core.git", rev = "715d4a18a59d13a5a51fee14bc1f6578de665c20" }
concrete-npe = { git = "ssh://git@github.com/zama-ai/concrete-core.git", rev = "715d4a18a59d13a5a51fee14bc1f6578de665c20" }
file-lock = "2.1.6"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
puruspe = "0.2.0"

[dev-dependencies]
approx = "0.5"
pretty_assertions = "1.2.1"
criterion = "0.4"

[lib]
crate-type = [
    "lib", # rust
]

[[bench]]
name = "benchmark"
harness = false
