[package]
name = "concrete-optimizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concrete-cpu-noise-model = { git = "ssh://git@github.com/zama-ai/concrete-cpu.git", rev = "c185266e55f31b7d4c6e3264d9569eb03b4a785e"  }
file-lock = "2.1.6"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
puruspe = "0.2.0"

[dev-dependencies]
approx = "0.5"
once_cell = "1.16.0"
pretty_assertions = "1.2.1"

[lib]
crate-type = [
    "lib", # rust
]
