[package]
name = "concrete-shortint"
version = "0.1.0-beta.0"
edition = "2018"
authors = ["Zama team"]
license = "BSD-3-Clause-Clear"
description = "Homomorphic Short Integer interface for the concrete FHE library."
homepage = "https://crates.io/crates/concrete"
documentation = "https://concrete.zama.ai"
repository = "https://github.com/zama-ai/concrete"
readme = "README.md"
keywords = ["fully", "homomorphic", "encryption", "fhe", "cryptography"]


[dependencies]
serde = { version = "1.0", features = ["derive"] }
# both utils and lazy_static are used for the keycache
# they both are deps to allow usage in bench in integer crate
# and dev-deps to automatically enable them in tests
concrete-utils = { path = "../concrete-utils", version = "0.1.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }
concrete-core = { package = "concrete-core-experimental", version = "1.0.0-alpha", features = ["multithread", "serde_serialize"]}

[dev-dependencies]
rand = "0.8.4"
criterion = "0.3.4"
paste = "1.0.7"
bincode = "1.3.3"
doc-comment = "0.3.3"
concrete-utils = { path = "../concrete-utils", version = "0.1.0" }
lazy_static = { version = "1.4.0" }

[features]
# Keychache used to speed up tests and benches
# by not requiring to regererate keys at each launch
internal-keycache = ["concrete-utils", "lazy_static"]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]

[[bench]]
name = "bench"
harness = false
required-features = ['internal-keycache']
