[package]
name = "concrete"
version = "0.1.11"
edition = "2018"
build = "build.rs"
authors = ["D. Ligier", "J.B. Orfila", "A. Péré", "S. Tap", "Zama team"]
license = "BSD-3-Clause-Clear"
description = "Concrete is a fully homomorphic encryption (FHE) library that implements Zama's variant of TFHE."
homepage = "https://crates.io/crates/concrete"
documentation = "https://docs.zama.ai/concrete/lib"
repository = "https://github.com/zama-ai/concrete"
readme = "README.md"
keywords = ["fully", "homomorphic", "encryption", "fhe", "cryptography"]

[build-dependencies]
cmake = { version = "0.1", optional = true}

[dependencies]
concrete-core = "=0.1.10"
concrete-npe = "=0.1.9"
concrete-commons = "=0.1.1"
itertools = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
backtrace = "0.3"
colored = "2.0.0"

[features]
gpu = ["cmake"]
cloud-computing = []
unsafe = []

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]