[package]
name = "concrete"
version = "0.2.0-beta.2"
edition = "2021"
readme = "README.md"
keywords = ["fully", "homomorphic", "encryption", "fhe", "cryptography"]
homepage = "https://zama.ai/"
documentation = "https://docs.zama.ai/concrete/"
license = "BSD-3-Clause-Clear"
description = "Concrete is a fully homomorphic encryption (FHE) library that implements Zama's variant of TFHE."

[dev-dependencies]
criterion = "0.3.5"
doc-comment = "0.3.3"
# Used in user documentation
bincode = "1.3.3"

[dependencies]
concrete-boolean = { path = "../concrete-boolean", optional = true }
concrete-shortint = { path = "../concrete-shortint", version = "0.1.0-beta.0", optional = true}
concrete-integer = { path = "../concrete-integer", version = "0.1.0-beta.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true}


[features]
booleans = ["concrete-boolean"]
shortints = ["concrete-shortint"]
integers = ["concrete-integer", "shortints"]
experimental_syntax_sugar = []
internal-keycache = ["concrete-shortint/internal-keycache", "concrete-integer/internal-keycache"]
#__newer_booleans = []

[[bench]]
name = "booleans"
harness = false
required-features = ["booleans"]

[[bench]]
name = "shortints"
harness = false
required-features = ["shortints"]

# https://docs.rs/about/metadata
[package.metadata.docs.rs]
features = ["serde", "booleans", "shortints", "integers"]
