[package]

name = "concrete-rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]

name = "concrete-rust-keygen"
path = "src/keygen.rs"

[lib]
name = "concrete_rust"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[build-dependencies]
capnpc = "0.20.1"

[dependencies]

capnp = "0.20.3"
clap = { version = "4.5.16", features = ["derive"] }

wasm-bindgen = { version = "0.2", features = ["serde-serialize"], optional = true }

tfhe = { version = "1.0" }
tfhe-csprng = { version = "0.5" }

[features]

wasm = ["dep:wasm-bindgen", "tfhe/__wasm_api"]
